flux/apps/multiscrobbler/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiscrobbler
  namespace: multiscrobbler
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: multiscrobbler
  template:
    metadata:
      labels:
        app.kubernetes.io/name: multiscrobbler
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        fsGroup: 2000
        fsGroupChangePolicy: "Always"
        readOnlyRootFilesystem: true
      containers:
        - name: multiscrobbler
          image: docker.io/foxxmd/multi-scrobbler:0.19.2
          ports:
            - name: multiscrobbler
              containerPort: 9078
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: multiscrobbler-config

          startupProbe:
            tcpSocket:
              port: multiscrobbler
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            tcpSocket:
              port: multiscrobbler
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: multiscrobbler
            initialDelaySeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              memory: "1G"
              cpu: ".25"
            limits:
              memory: "1G"
              cpu: ".5"
      volumes:
        - name: multiscrobbler-config
          persistentVolumeClaim:
            claimName: multiscrobbler-config
