flux/apps/multiscrobbler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multiscrobbler
  namespace: multiscrobbler
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: multiscrobbler
  ports:
    - name: multiscrobbler
      port: 9078
      targetPort: multiscrobbler
      protocol: TCP
