flux/apps/multiscrobbler/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: multiscrobbler-web
  namespace: multiscrobbler
  annotations:
    switchboard.borchero.com/ignore: "all"
    external-dns.alpha.kubernetes.io/target: traefik.tartarus.us
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`multiscrobbler.tartarus.us`)
      kind: Rule
      services:
        - name: multiscrobbler
          kind: Service
          port: 9078
      middlewares:
        - name: https-redirect-middleware
          namespace: multiscrobbler

  tls:
    secretName: letsencrypt-wildcard-cert-tartarus.us-prod
